tests/testfiles/passing/invalid_identifiers/keyword_as_id_while.c
/* Keyword as identifier: while */
int main() {
    int while;
}